# manukora

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  sales-data.csv
.claude/: settings.json
.github/workflows/: ci.yml
_docs/: architecture.mmd  learning_concepts.md  local-eval-results.txt  openarmature-integration.md  part-2-morning-brief.md  production-eval-results.txt  submission_guidelines.md
_docs/adr/: 0001-calculate-first-reason-second.md  0002-llm-factory-pattern.md  0003-separate-microservices.md  0004-bioactive-blend-demand-suppression.md  0004-biosynergy-demand-suppression.md  0005-tenacity-retry.md  0006-deepeval-llm-evaluation.md
_plans/: calculate-first-reason-second-plan.md  openarmature-conversion-plan.md  repo-repurpose-plan.md  submission-strategy-part-1-plan.md
_reqs/: calculate-first-reason-second.md  repo-repurpose.md  submission-strategy-part-1.md
backend/: .dockerignore  Dockerfile  api.py  config.py  conftest.py  fly.toml  graph.py  llm_service.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  sop_engine.py  telemetry.py
backend/templates/: prompt_configs.json  prompt_labels.json  system_prompt.j2  user_prompt.j2
backend/tests/: run_evals.py  test_api.py  test_evals.py  test_graph.py  test_sop_engine.py
frontend/: Dockerfile  app.py  fly.toml  pyproject.toml  requirements.txt
frontend/tests/: test_app.py
scripts/: push_prompt.py  test_hyperdx.py
