[project]
name = "honey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "backend",
    "frontend",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
    "types-requests>=2.33.0.20260402",
]
