[project]
name = "deterministic-ai-agent"
version = "0.1.0"
description = "Reference architecture for deterministic AI agents using the Calculate First, Reason Second pattern — a weekly S&OP briefing where Pandas does the math and the LLM handles narrative reasoning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "backend",
    "frontend",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
    "types-requests>=2.33.0.20260402",
]
