[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.89.0",
    "deepeval>=3.9.5",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langfuse>=4.0.6",
    "openai>=2.30.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
