[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Terravita S&OP Intelligence — Pandas calculation engine + LLM briefing generation"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "deepeval>=3.9.7",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langfuse>=4.3.1",
    "openai>=2.32.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.2",
    "starlette>=1.0.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.44.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: live LLM tests (require running local LLM, deselected by default)",
]
addopts = "-m 'not integration'"
filterwarnings = [
    "ignore::DeprecationWarning:deepeval",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
